--- a/rke2-terraform/templates/cloud_initclient.cfg
+++ b/rke2-terraform/templates/cloud_initclient.cfg
@@ -25,11 +25,12 @@ runcmd:
   - sed -i '/ swap / s/^/#/' /etc/fstab
 
   # Activare traficului de containere prin retea
+  # https://kubernetes.io/docs/concepts/extend-kubernetes/compute-storage-net/network-plugins/#network-plugin-requirements
   - echo 1 > /proc/sys/net/bridge/bridge-nf-call-arptables
   - echo 1 > /proc/sys/net/bridge/bridge-nf-call-ip6tables
   - echo 1 > /proc/sys/net/bridge/bridge-nf-call-iptables
   - echo "net.bridge.bridge-nf-call-arptables = 1" >> /etc/sysctl.conf
-  - echo "net.bridge.bridge-nf-call-ip6tables" >> /etc/sysctl.conf
+  - echo "net.bridge.bridge-nf-call-ip6tables = 1" >> /etc/sysctl.conf
   - echo "net.bridge.bridge-nf-call-iptables = 1" >> /etc/sysctl.conf
 
   # Update
