--- a/rke2-terraform/templates/cloud_init_controlplane.cfg
+++ b/rke2-terraform/templates/cloud_init_controlplane.cfg
@@ -15,16 +15,17 @@ write_files:
     path: /etc/rancher/rke2/config.yaml
 
 runcmd:
-  # Initializare Docker
+  # Initializare repo Docker
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - apt-add-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
 
   # Activare traficului de containere prin retea
+  # https://kubernetes.io/docs/concepts/extend-kubernetes/compute-storage-net/network-plugins/#network-plugin-requirements
   - echo 1 > /proc/sys/net/bridge/bridge-nf-call-arptables
   - echo 1 > /proc/sys/net/bridge/bridge-nf-call-ip6tables
   - echo 1 > /proc/sys/net/bridge/bridge-nf-call-iptables
   - echo "net.bridge.bridge-nf-call-arptables = 1" >> /etc/sysctl.conf
-  - echo "net.bridge.bridge-nf-call-ip6tables" >> /etc/sysctl.conf
+  - echo "net.bridge.bridge-nf-call-ip6tables = 1" >> /etc/sysctl.conf
   - echo "net.bridge.bridge-nf-call-iptables = 1" >> /etc/sysctl.conf
 
   # Update
